convertedToMDAPI/objects/AppointmentLineItem__c.object
<CustomObject>
    <description>Material Line Item  related to the appointment</description>
    <label>Appointment Line Item</label>
    <nameField>
        <displayFormat>ALI-{00000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Appointment__c</fullName>
        <inlineHelpText>Appointment the line item belongs to</inlineHelpText>
        <label>Appointment</label>
        <referenceTo>Appointment__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>AppointmentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BatchMaterialExpirationDate__c</fullName>
        <inlineHelpText>Expiry date of the material</inlineHelpText>
        <label>Batch Material Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BatchNumber__c</fullName>
        <inlineHelpText>Batch Id of the material</inlineHelpText>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <formula>Appointment__r.Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CryobagNumber__c</fullName>
        <description>CryobagNumber</description>
        <inlineHelpText>CryobagNumber</inlineHelpText>
        <label>Cryobag #</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cryobag_ID__c</fullName>
        <description>Cryobag ID</description>
        <inlineHelpText>Cryobag ID</inlineHelpText>
        <label>Cryobag ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfManufacture__c</fullName>
        <inlineHelpText>Manufacturing date of the material</inlineHelpText>
        <label>Date Of Manufacture</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DIN_Apheresis_ID__c</fullName>
        <description>DIN/Apheresis ID</description>
        <inlineHelpText>DIN/Apheresis ID</inlineHelpText>
        <label>DIN/Apheresis ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Line item&#39;s material number</inlineHelpText>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Appointment Line Items</relationshipLabel>
        <relationshipName>AppointmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nucleated_Cell_Count__c</fullName>
        <description>Nucleated Cell Count</description>
        <inlineHelpText>Nucleated Cell Count</inlineHelpText>
        <label>Nucleated Cell Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Number of units</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalVolumePerBag__c</fullName>
        <description>Total Volume per bag (ml)</description>
        <inlineHelpText>Total Volume per bag (ml)</inlineHelpText>
        <label>Total Volume per bag (ml)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Be_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Be Shipped</description>
        <inlineHelpText>To Be Shipped</inlineHelpText>
        <label>To Be Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NC/kg</fullName>
                </value>
                <value>
                    <fullName>TNC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>